--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <div class="note">
   <strong>Each song has 4 recordings:</strong> Full Mix (100% vocals), Half Vox (50%), Ghost Vox (10%), Karaoke (0%). Switch recordings using the dropdown in the Soundslice player.
   <br><br>
-  <strong>Status:</strong> These slices are currently private (admin-only). To share with students, open each slice and generate a secret link via Private > Secret Link.
+  <strong>Status:</strong> All links are live and shareable.
 </div>
 
 <p class="section-label">Bouncing with Boynton</p>
